Se optimiza la exportación de archivos csv y xlsx, se actualiza e implementa envío con template el email. Los métodos quedan más eficientes.

--- a/shared/views/email/settlement.hbs
+++ b/shared/views/email/settlement.hbs
@@ -9,7 +9,11 @@
 <body>
     <p>{{dear}}</p>
     <p>{{message}}</p>
-    <p><a href="{{url}}">{{nameURL}}</a></p>
+    <p>
+    {{#urlTag}}
+        <a href="{{url}}">{{name}}</a><br>
+    {{/urlTag}}
+    </p>
     <br>
     {{greeting}}
     <br>
